# qt-bench

./: .gitignore  CMakeLists.txt  LICENSE  README.md  qt-bench.pro  update-translations.sh
languages/: TranslationExample_de.ts  TranslationExample_en.ts  TranslationExample_ru.ts
plugin-example/: CMakeLists.txt  update-translations.sh
plugin-example/client/: CMakeLists.txt  main.cpp
plugin-example/languages/: example-plugin_de.ts  example-plugin_en.ts  example-plugin_ru.ts
plugin-example/plugin/: CMakeLists.txt  plugin-strings.cpp  plugin-strings.h  plugin.cpp  plugin.h
plugin-example/shared/: plugin-interface.h
src/: main.cpp
